add classroom and movie

--- a/my website creation/R3LAMP-Official-site-sample/index.html
+++ b/my website creation/R3LAMP-Official-site-sample/index.html
@@ -60,7 +60,7 @@
       </header>
 
       <div class="background"></div>
-      <button class="navbottom">
+      <button class="navbottom" onclick="topFunction()">
          <i class="bx bx-chevron-up"></i>
       </button>
 
