--- a/my website creation/gaming/index.html
+++ b/my website creation/gaming/index.html
@@ -350,6 +350,47 @@
          </div>
       </section>
 
+      <!-- SLIDE BACKGROUND EFFECT -->
+      <!-- <div class="intro">
+         <p>sds</p>
+      </div> -->
+
+      <!-- STAGGER SLIDE BACKGROUND EFFECT -->
+      <!-- <div class="overlayback">
+         <div class="block b1"></div>
+         <div class="block b2"></div>
+         <div class="block b3"></div>
+         <div class="block b4"></div>
+         <div class="block b5"></div>
+      </div> -->
+
+      <div class="overlayback">
+         <div class="temp"></div>
+         <div class="firstblock"></div>
+         <div class="secondblock"></div>
+         <div class="loaders">
+            <h1>LOADING</h1>
+         </div>
+      </div>
+
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
       <script src="https://unpkg.com/boxicons@2.1.1/dist/boxicons.js"></script>
+
+      <script>
+         // let tl = gsap.timeline({ default: { ease: "Power1.out" } });
+         // var t1 = new TimelineMax({ default: { ease: "Power1.out" } });
+
+         // t1.to(".block", 1.2, {
+         //    width: "100%",
+         //    delay: 1.5,
+         //    stagger: 0.3,
+         //    duration: 1,
+         // });
+
+         // tl.to(".show", { duration: 0, stagger: 0.3 });
+         // tl.to("#create", { y: "0%", duration: 1, stagger: 0.3, delay: 1 });
+
+         // tl.to(".intro", { y: "-100%", duration: 1.5, delay: 0.5 });
+      </script>
    </body>
 </html>
