add gaming site gamex

--- a/my website creation/UI typo/index.html
+++ b/my website creation/UI typo/index.html
@@ -130,34 +130,30 @@
             </ul>
             <div class="works__gallerywrap">
                <div class="works__img">
-                  <img src="assets/img/1.jpg" alt="" />
+                  <img loading="lazy" src="assets/img/1.jpg" alt="" />
                </div>
-               <div class="works__img">
-                  <img src="assets/img/3.jpg" alt="" />
+               <div class="works__vimg">
+                  <img loading="lazy" src="assets/img/2.jpg" alt="" />
                </div>
 
                <div class="works__img">
-                  <img src="assets/img/4.jpg" alt="" />
+                  <img loading="lazy" src="assets/img/3.jpg" alt="" />
                </div>
 
                <div class="works__vimg">
-                  <img src="assets/img/4.jpg" alt="" />
+                  <img loading="lazy" src="assets/img/4.jpg" alt="" />
                </div>
 
                <div class="works__img">
-                  <img src="assets/img/2.jpg" alt="" />
+                  <img loading="lazy" src="assets/img/2.jpg" alt="" />
                </div>
 
                <div class="works__img">
-                  <img src="assets/img/1.jpg" alt="" />
+                  <img loading="lazy" src="assets/img/1.jpg" alt="" />
                </div>
 
                <div class="works__img">
-                  <img src="assets/img/2.jpg" alt="" />
-               </div>
-
-               <div class="works__img">
-                  <img src="assets/img/2.jpg" alt="" />
+                  <img loading="lazy" src="assets/img/2.jpg" alt="" />
                </div>
             </div>
 
