--- a/my website creation/Classroom/index.html
+++ b/my website creation/Classroom/index.html
@@ -50,7 +50,7 @@
       </header>
 
       <!---STUDENT PROGRESS SECION-->
-      <section class="student">
+      <main class="student">
          <div class="container">
             <div class="flex-space">
                <div class="student__fullname txt-white">
@@ -80,7 +80,7 @@
                </div>
             </div>
          </div>
-      </section>
+      </main>
 
       <!---COURSE SECION-->
       <section class="course">
