--- a/my website creation/gaming/navigate.html
+++ b/my website creation/gaming/navigate.html
@@ -1,68 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
-   <link rel="stylesheet" href="css/nav.css">
-    <!-- JQuery CDN -->
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Document</title>
+      <link rel="stylesheet" href="css/nav.css" />
+      <!-- JQuery CDN -->
       <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
       <!-- Greensock(TweenMax) CDN -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
       <!-- fontawesome CDN -->
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-</head>
-<style>
-</style>
-<body>
-    <section>
+      <link
+         rel="stylesheet"
+         href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+      />
+   </head>
+   <style></style>
+   <body>
+      <section>
          <h1>Navigation block reveal</h1>
-    </section>
+      </section>
 
-    <div class="menu-overlay">
+      <div class="menu-overlay">
          <div class="block b1"></div>
          <div class="block b2"></div>
          <div class="block b3"></div>
          <div class="block b4"></div>
-    </div>
+      </div>
 
-    <div class="strips">
+      <div class="strips">
          <div class="strip one"></div>
          <div class="strip two"></div>
          <div class="strip three"></div>
-    </div>
+      </div>
 
-    <div class="menu">
-       <ul>
-          <li>Home </li>
-          <li>About</li>
-          <li>Works </li>
-          <li>Contact </li>
-       </ul>
-    </div>
+      <div class="menu">
+         <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Works</li>
+            <li>Contact</li>
+         </ul>
+      </div>
 
-    <div class="menu-btn">
-       <span>X</span>
-    </div>
+      <div class="menu-btn">
+         <span>X</span>
+      </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
 
-     <script type="text/javascript">
-            var t1 = new TimelineMax({paused : true});
+      <script type="text/javascript">
+         var t1 = new TimelineMax({ paused: true });
+         const btncolor = document.querySelector(".menu-btn span");
 
-            t1.to(".block", 1.2, {
-                  width: "25%",
-                  ease: Power4.easeInOut
-            });
+         t1.to(".block", 1.2, {
+            width: "25%",
+            ease: Power4.easeInOut,
+         });
 
-            t1.staggerFrom(".menu ul li", 0.8, {y: 40, opacity: 0, ease: Power2.easeOut}, 0.2);
+         t1.staggerFrom(
+            ".menu ul li",
+            0.8,
+            { y: 40, opacity: 0, ease: Power2.easeOut },
+            0.2
+         );
 
-            t1.reverse();
-            $(document).on("click", ".menu-btn", function() {
-                  t1.reversed(!t1.reversed());
-            });
+         t1.reverse();
+         $(document).on("click", ".menu-btn", function () {
+            btncolor.style.color = "white";
+            t1.reversed(!t1.reversed());
+         });
       </script>
-</body>
-
+   </body>
 </html>
